--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "Debt Manager app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
   "author": "AllKinds",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "mongoose": "^4.7.2",
     "morgan": "^1.7.0"
